--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
     "@types/react-transition-group": "^4.4.10",
+    "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
     "adm-zip": "^0.5.12",
     "autoprefixer": "^10.4.16",
@@ -97,6 +98,7 @@
     "lowlight": "2.9.0",
     "native-run": "^2.0.0",
     "normalize.css": "^8.0.1",
+    "onedrive-api": "^1.1.1",
     "postcss": "^8.4.32",
     "postcss-nesting": "^12.0.1",
     "prosemirror-history": "^1.3.2",
@@ -119,6 +121,7 @@
     "remixicon": "3.7.0",
     "remixicon-react": "^1.0.0",
     "rxjs": "^7.8.1",
+    "simple-oauth2": "^5.0.0",
     "slick-bottom-sheet": "^0.1.1",
     "tippy.js": "^6.3.7",
     "tiptap": "^1.32.2",
