--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3",
-    "vite": "^5.0.7"
+    "vite": "^5.2.11",
+    "vite-plugin-mkcert": "^1.17.5"
   }
 }
