--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.1",
     "@types/d3": "^7.4.3",
+    "@types/dompurify": "^3.0.5",
     "@types/react-transition-group": "^4.4.10",
     "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
@@ -82,6 +83,7 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.8.5",
     "dayjs": "^1.11.10",
+    "dompurify": "^3.1.5",
     "dropbox": "^10.34.0",
     "eslint-config-react-app": "^7.0.1",
     "formidable": "v3",
