--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "prosemirror-history": "^1.3.2",
     "prosemirror-model": "^1.19.3",
     "prosemirror-state": "^1.4.3",
+    "prosemirror-utils": "^1.2.2",
     "puppeteer": "^21.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
