--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/simple-oauth2": "^5.0.7",
     "@types/uuid": "^9.0.7",
     "@types/xml2js": "^0.4.14",
+    "@use-gesture/react": "^10.3.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
@@ -119,6 +120,7 @@
     "react-katex": "^3.0.1",
     "react-mermaid2": "^0.1.4",
     "react-router-dom": "^6.21.0",
+    "react-spring": "^9.7.4",
     "react-swipeable": "^7.0.1",
     "react-transition-group": "^4.4.5",
     "react-use": "^17.5.0",
