--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ ios/.DS_Store
 ios/App/App/Keys/Secrets.xcconfig
 ios/App/Keys/Secrets.xcconfig
 android/app/gradle.properties
+ios/App/App/Keys/Secrets.xcconfig
