--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,6 @@ resources/android/**/*
 ios/App/.DS_Store
 ios/.DS_Store
 .DS_Store
-ios/App/App/Keys/Secrets.xcconfig
-ios/App/Keys/Secrets.xcconfig
 android/app/gradle.properties
 ios/App/App/Keys/Secrets.xcconfig
-ios/App/App/Keys/Secrets.xcconfig
-ios/App/App/Keys/Secrets.xcconfig
-ios/App/App/Keys/Secrets.xcconfig
+/ios/App/App/Keys
