--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -21,9 +21,11 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.$(GOOGLE_CLIENT_ID)</string>
+				<string>com.googleusercontent.apps.462278481265-lepiac3eaoe2d7loo0jiu357chcp2r0a</string>
 			</array>
 		</dict>
 		<dict>
